EasyFIS Commit: Navbar Collapse Fixed

--- a/easyfis/Content/style.css
+++ b/easyfis/Content/style.css
@@ -403,9 +403,11 @@ a:hover.profile-name, a:active.profile-name, a:focus.profile-name {
 }
 
 .change-password-success {
+    border-top: 1px solid gray;
+    padding-top: 20px; 
+    margin-top: 20px;
     color: #009900;
     font-size: 20px;
-    float: right;
 }
 
 /* User FOrm */
